iptables-rules.txt
# Generated by iptables-save v1.8.7 on Fri Mar 20 17:37:00 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Fri Mar 20 17:37:00 2026
# Generated by iptables-save v1.8.7 on Fri Mar 20 17:37:00 2026
*filter
:INPUT ACCEPT [112:5517]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2830408:935732172]
:InstanceServices - [0:0]
:f2b-sshd - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -s 75.67.22.175/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5443 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9000 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 7000 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 75.67.22.175/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p udp -m udp --dport 41641 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j DROP
-A FORWARD -j ts-forward
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -d 169.254.0.0/16 -j InstanceServices
-A InstanceServices -d 169.254.0.2/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.2.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.4.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.5.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.2/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.3/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.4/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 67 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 69 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 123 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
-A InstanceServices -d 169.254.0.0/16 -p tcp -m tcp -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j REJECT --reject-with tcp-reset
-A InstanceServices -d 169.254.0.0/16 -p udp -m udp -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.104.201.14/32 -i lo -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Fri Mar 20 17:37:00 2026
# Generated by iptables-save v1.8.7 on Fri Mar 20 17:37:00 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ts-postrouting - [0:0]
-A POSTROUTING -j ts-postrouting
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Fri Mar 20 17:37:00 2026
